deploy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pandemic
spec:
  selector:
    app: pandemic
  ports:
    - port: 3000
      targetPort: 3000
