deploy/manifests/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pandemic
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hantavirus.xetera.dev`)
      priority: 10
      services:
        - name: pandemic
          port: 3000
      middlewares:
        - name: ingress-cloudflare-only@kubernetescrd
  tls:
    options:
      name: ingress-cloudflare-mtls@kubernetescrd
    secretName: cloudflare-origin-xetera.dev
